# swagger-output.json
@@ -434,7 +434,18 @@
                   "example": "any"
                 },
                 "items": {
-                  "example": "any"
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "productId": {
+                        "example": "any"
+                      },
+                      "quantity": {
+                        "example": "any"
+                      }
+                    }
+                  }
                 }
               }
             }
@@ -474,7 +485,7 @@
         }
       }
     },
-    "/api/orders/my": {
+    "/api/orders/my/": {
       "get": {
         "description": "",
         "parameters": [
@@ -482,6 +493,18 @@
             "name": "authorization",
             "in": "header",
             "type": "string"
+          },
+          {
+            "name": "customerId",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "customerId": {
+                  "example": "any"
+                }
+              }
+            }
           }
         ],
         "responses": {
@@ -542,6 +565,36 @@
       }
     },
     "/api/orders/{id}": {
+      "get" : {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      },
       "delete": {
         "description": "",
         "parameters": [
